--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --text-color: #a8bacf,
+  --background-color: #ffffff,
+  --pop-color: #dbf4a7,
+  --nav-color: #7d84b2,
+  --secondary-color: #8e9dcc,
+  --tertiary-color: #d9dbf1,
+  --dark-color: #111344,
+  --light-color: #C6DEFF
 }
 
+body {
+  margin: 0;
+  font-family: 'Montserrat', 'Segoe UI', 'Helvetica Neue', 'sans-serif';
+  background-color: var(--background-color);
+}
+header {
+  background-color: var(--nav-color);
+}
+nav {
+  display: flex;
+  flex-direction: row;
+  background-color: var(--nav-color);
+  
+}
+nav ul li {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+  background-color: var(--nav-color);
+}
+li a {
+  display: flex;
+  
+  text-decoration: none;
+}
+h1, h2 {
+  font-family: 'Montserrat', sans-serif;
+}
+p {
+  font-family: 'Montserrat', sans-serif;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
