--- a/src/index.css
+++ b/src/index.css
@@ -1,46 +1,101 @@
 :root {
-  --text-color: #a8bacf,
-  --background-color: #ffffff,
-  --pop-color: #dbf4a7,
-  --nav-color: #7d84b2,
-  --secondary-color: #8e9dcc,
-  --tertiary-color: #d9dbf1,
-  --dark-color: #111344,
-  --light-color: #C6DEFF
+  --text-color: #a8bacf;
+  --background-color: #d9dbf1;
+  --pop-color: #dbf4a7;
+  --nav-color: #4f536f;
+  --secondary-color: #8e9dcc;
+  --tertiary-color: #d9dbf1;
+  --dark-color: #2e2f4d;
+  --light-color: #C6DEFF;
 }
 
 body {
   margin: 0;
+  top: 50%;
   font-family: 'Montserrat', 'Segoe UI', 'Helvetica Neue', 'sans-serif';
-  background-color: var(--background-color);
+  background: rgb(79,83,111);
+background: linear-gradient(90deg, rgba(79,83,111,1) 0%, rgba(140,175,224,1) 64%, rgba(142,157,204,1) 100%), no-repeat;
 }
 header {
-  background-color: var(--nav-color);
+  position: relative;
+  top: 3rem;
 }
-nav {
-  display: flex;
-  flex-direction: row;
+.navbar {
   background-color: var(--nav-color);
-  
+  position: fixed;
+  height: 65px;
+  top: 0;
+  width: 100%;
 }
-nav ul li {
+.navbar-nav {
   display: flex;
+  /* justify-content: flex-end; */
   list-style: none;
-  justify-content: space-around;
   background-color: var(--nav-color);
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  height: 100%;
+}
+.drop-down-nav i {
+  display: none;
 }
 li a {
-  display: flex;
-  
+  display: block;
+  padding: 1rem 2rem;
   text-decoration: none;
+}
+li a:hover {
+  background-color: var(--secondary-color);
+  /* Doesn't seem to be working */
+}
+.active {
+  background-color: var(--tertiary-color);
+  color: var(--dark-color)
 }
 h1, h2 {
   font-family: 'Montserrat', sans-serif;
+  color: #ffff
 }
 p {
   font-family: 'Montserrat', sans-serif;
 }
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  border: none;
+  border-radius: 3px;
+  position: relative;
+  top: 4rem;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  color: white
+}
+button:hover {
+  color: #b6d279
+}
+ul {
+  list-style: none;
+}
+footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: #ffff;
+}
+footer ul {
+  display: flex;
+  justify-content: space-around;
+  /* padding: .5rem; */
+  margin: 0;
+}
+
+
+@media screen and (max-width: 480px) {
+  .drop-down-nav i {
+    width: 5rem;
+    height: 4rem;
+    font-size: 4rem;
+  }
 }
