--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,9 @@ body {
   background: rgb(79,83,111);
 background: linear-gradient(90deg, rgba(79,83,111,1) 0%, rgba(140,175,224,1) 64%, rgba(142,157,204,1) 100%), no-repeat;
 }
+.container {
+  position: relative;
+}
 header {
   position: relative;
   top: 3rem;
@@ -26,6 +29,7 @@ header {
   height: 65px;
   top: 0;
   width: 100%;
+  z-index: 10;
 }
 .navbar-nav {
   display: flex;
@@ -53,6 +57,29 @@ li a:hover {
   background-color: var(--tertiary-color);
   color: var(--dark-color)
 }
+.content-wrap {
+  padding-bottom: 4rem;
+
+  /* display: flex;
+  flex-direction: column;
+  justify-content:space-between; */
+}
+.content-wrap div, .content-wrap section, header, .about {
+  /* height: 50rem; */
+  /* display: flex; */
+  /* justify-content: space-between; */
+}
+.project {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.skills-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  height: 5rem;
+}
 h1, h2 {
   font-family: 'Montserrat', sans-serif;
   color: #ffff
@@ -63,7 +90,7 @@ p {
 button {
   border: none;
   border-radius: 3px;
-  position: relative;
+  /* position: relative; */
   top: 4rem;
   padding: 1rem 2rem;
   font-size: 1rem;
@@ -72,7 +99,9 @@ button {
   color: white
 }
 button:hover {
-  color: #b6d279
+  color: #2e2f4d;
+  background-color: #fff;
+  font-weight: 600;
 }
 ul {
   list-style: none;
@@ -82,6 +111,7 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 5rem;
   color: #ffff;
 }
 footer ul {
@@ -89,6 +119,10 @@ footer ul {
   justify-content: space-around;
   /* padding: .5rem; */
   margin: 0;
+}
+
+img {
+  width: 50%;
 }
 
 
