--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,205 @@
-.App {
+:root {
+  --text-color: #a8bacf;
+  --background-color: #d9dbf1;
+  --pop-color: #dbf4a7;
+  --nav-color: #4f536f;
+  --secondary-color: #8e9dcc;
+  --tertiary-color: #d9dbf1;
+  --dark-color: #2e2f4d;
+  --light-color: #C6DEFF;
+}
+
+body {
+  margin: 0;
+  top: 50%;
+  font-family: 'Montserrat', 'Segoe UI', 'Helvetica Neue', 'sans-serif';
+  min-width: 400px;
+  background:rgba(142,157,204,1);
+background: linear-gradient(90deg, rgba(79,83,111,1) 0%, rgba(140,175,224,1) 64%, rgba(142,157,204,1) 100%), no-repeat;
+
+}
+.container {
+  position: relative;
+}
+header {
+  position: relative;
+  top: 3rem;
+}
+.navbar {
+  background-color: var(--nav-color);
+  position: fixed;
+  height: 65px;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+}
+.navbar-nav {
+  display: flex;
+  /* justify-content: flex-end; */
+  list-style: none;
+  background-color: var(--nav-color);
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  height: 100%;
+}
+.drop-down-nav i {
+  display: none;
+}
+li a {
+  display: block;
+  padding: 1rem 2rem;
+  text-decoration: none;
+}
+.navbar li a:hover {
+  background-color: var(--secondary-color);
+  /* Doesn't seem to be working */
+}
+.active {
+  background-color: var(--tertiary-color);
+  color: var(--dark-color)
+}
+.content-wrap {
+  padding-bottom: 5rem;
+}
+.content-wrap div, .content-wrap section {
+  padding: 2rem;
   text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.project {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  width: 100%
+  justify-content: space-between;
+  margin-bottom: 3rem;
+}
+.project h3 {
+  color: #fff;
+}
+.project a {
+  color: var(--pop-color);
+  /* text-decoration: none; */
+}
+.list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding-inline-start: 0%;
+}
+h1, h2 {
+  font-family: 'Montserrat', sans-serif;
+  color: #ffff
+}
+h1 {
+  margin-top: 15rem;
+}
+header h2 {
+  margin-bottom: 10rem;
+}
+.greeting {
+  margin-bottom: 15rem;
+  background-color: rgba(103, 107,134, .35);
+}
+p {
+  font-family: 'Montserrat', sans-serif;
+}
+a.btn {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  text-decoration: none;
+  border: none;
+  border-radius: 3px;
+  top: 4rem;
+  padding: 1rem 1.5rem;
+  width: 9rem;
+  font-size: 1rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  color: white
+}
+button:hover {
+  color: #2e2f4d;
+  background-color: #fff;
+  font-weight: 600;
+}
+.thanks {
+  margin-top: 10rem;
+  background-color: #C6DEFF;
+  padding: .5rem;
+}
+ul {
+  list-style: none;
+}
+footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5rem;
+  color: #ffff;
+}
+footer ul {
+  display: flex;
+  justify-content: space-around;
+  color: #fff;
+  margin: 0;
 }
 
+img {
+  width: 50%;
+}
+.contact ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+@media screen and (max-width: 600px){
+  .list {
+    flex-direction: column;
+  } 
+  .list li {
+    
+  }
+  img {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .drop-down-nav i {
+    width: 5rem;
+    height: 4rem;
+    font-size: 4rem;
+  }
+  img {
+    width: 100%;
+    min-width: 300px;
+  }
+  .content-wrap section {
+    padding: 0;
+  }
+  .list {
+    margin: 5px 0 5px;
+    padding-inline-start: 0%;
+  }
+  .list li {
+    padding: 5px;
+  }
+  .content-wrap {
+    width: 100%;
+    min-width: 300px;
+  }
+  .greeting {
+    margin-bottom: 10rem;
+  }
+  .drop-down-nav {
+    background-color: #2e2f4d;
+  }
+  .contact ul {
+    flex-direction: column;
+  }
+  .contact li {
+    padding-bottom: 2rem;
+  }
+}
